# doc2md

./: .gitattributes  README.md  pyproject.toml  start_model.sh
doc2md/: main.py
doc2md/api/: file_api.py
doc2md/pdf2md/: pdf2md.py
doc2md/util/: utils.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx  FileUpload.tsx  PreviewAndParseView.tsx
frontend/src/pages/: FileProcessor.tsx
frontend/src/utils/: api.ts  config.ts
